Fix misalignment of buttons and create an add book button

--- a/app/assets/stylesheets/custom-container.scss
+++ b/app/assets/stylesheets/custom-container.scss
@@ -22,7 +22,6 @@
 }
 
 .custbtn-container {
-  width: 800px;
   margin: 30px auto;
   text-align: center;
 }
